# sentence-splitter

./: .gitignore  Cargo.toml  LICENSE  README.md
data/weights/: Czech.json  Danish.json  Dutch.json  English.json  Estonian.json  Finnish.json  French.json  German.json  Greek.json  Italian.json  Norwegian.json  Polish.json  Portuguese.json  Slovenian.json  Spanish.json  Swedish.json  Turkish.json
src/: lib.rs
src/helper/: common.rs  errors.rs  mod.rs  resources.rs  slice.rs
src/tokenize/: mod.rs  punkt.rs
utils/: download-weights.py
